# uemacs

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
inc/: ebind.h  edef.h  efunc.h  epath.h  estruct.h  evar.h  line.h  usage.h  utf8.h  util.h  version.h  wrapper.h
src/: CMakeLists.txt  main.c  version.c
